<resources>
    <string name="app_name">Layout_1712878</string>
    <string name="open_calculator">Open calculator</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="ngoac">()</string>
    <string name="phantram">%</string>
    <string name="chia">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="tru">-</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="cong">+</string>
    <string name="cong_tru">+/-</string>
    <string name="_0">0</string>
    <string name="cham">.</string>
    <string name="bang">=</string>
    <string name="title_activity_maps">Map</string>
    <string name="open_googlemap">Open GoogleMap</string>
    <string name="menu_maps">Menu maps</string>
    <string name="search_here">Search Here</string>
    <string name="mode">mode</string>
    <string name="go">go</string>
    <string name="explore">Explore</string>
    <string name="commute">Commute</string>
    <string name="open_alarm">Open Alarm</string>
    <string name="open_create_alarm">Open create Alarm</string>
    <string name="alarm">Alarm</string>
    <string name="world_clock">World clock</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="_4_45">4:45</string>
    <string name="tue_oct_1">Tue, Oct 1</string>
    <string name="option">Option</string>
    <string name="new_alarm">New Alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="alarm_name">Alarm name</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="vibration">Vibration</string>
    <string name="snooze">Snooze</string>
    <string name="turn_off_during_public_holidays">Turn off during public holidays</string>
    <string name="tomorrow_tue_oct_1">Tomorrow-Tue, Oct 1</string>
    <string name="m">M</string>
    <string name="w">W</string>
    <string name="t">T</string>
    <string name="f">F</string>
    <string name="s">S</string>
</resources>
