<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="auto"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txtResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <ImageView
                    android:id="@+id/history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/customiconcalculator"
                    android:src="@drawable/time" />
            <ImageView
                android:id="@+id/convert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@id/history"
                android:background="@drawable/customiconcalculator"
                android:src="@drawable/ruler" />

            <ImageView
                android:id="@+id/rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/customiconcalculator"
                android:src="@drawable/pi"
                app:layout_constraintLeft_toRightOf="@id/convert" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/customiconcalculator"
                android:src="@drawable/delete"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/c"
                android:textColor="@android:color/holo_red_light"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/ngoac"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/phantram"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/chia"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_7"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_8"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_9"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/x"
                android:textAllCaps="false"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_4"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_5"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_6"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/tru"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_1"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_2"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_3"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/cong"
                android:textColor="@android:color/holo_green_dark"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/cong_tru"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/_0"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:text="@string/cham"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/customnumber"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/bang"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle"
                tools:targetApi="lollipop" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>