<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/lvAlarm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:gravity="left"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/alarm"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_marginTop="6dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            app:srcCompat="@drawable/cong"
            android:contentDescription="@string/new_alarm" />

        <ImageView
            android:id="@+id/imageView4"
            android:gravity="center"
            android:layout_marginTop="6dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/option"
            android:contentDescription="@string/option" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvAlarm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvAlarm">

        <TextView
            android:id="@+id/textView2"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/alarm" />

        <TextView
            android:id="@+id/textView5"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/world_clock" />

        <TextView
            android:id="@+id/textView6"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/stopwatch" />

        <TextView
            android:id="@+id/textView7"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/timer" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>