<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <LinearLayout
                android:id="@+id/menuSearchMap"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customsearchmaps"
                android:orientation="horizontal"
                tools:ignore="UselessParent">


                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/menu_maps"
                    android:src="@drawable/menu" />

                <EditText
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/search_here"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/menu_maps"
                    android:src="@drawable/microphone" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/menu_maps"
                    android:src="@drawable/user" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imgLayer"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_below="@+id/menuSearchMap"
                android:layout_alignEnd="@+id/menuSearchMap"
                android:layout_alignRight="@+id/menuSearchMap"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/mode"
                android:src="@drawable/layers_bg" />

            <ImageView
                android:id="@+id/imgGPS"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/imgGo"
                android:layout_alignEnd="@+id/menuSearchMap"
                android:layout_alignRight="@+id/menuSearchMap"
                android:contentDescription="@string/mode"
                android:src="@drawable/locate_bg" />

            <ImageView
                android:id="@+id/imgGo"
                android:layout_marginTop="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/go"
                android:src="@drawable/go" />

        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ImageView
            android:id="@+id/imgExplore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/explore"
            android:contentDescription="@string/explore" />
        <ImageView
            android:id="@+id/imgCommute"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/commute"
            android:contentDescription="@string/commute" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
